# CGS_2

./: .coverage  .env.example  .gitignore  =2.0.0  ANALISI_COMPLETATA.txt  ANALISI_CONCLUSIONI.md  ANALISI_FRONTEND_FINALE.txt  ANALISI_PR_30_E_FLUSSO_ATTUALE.md  API_KEYS_FIX.md  CARDS_SERVICE_REQUIREMENTS.md  CARD_DATA_EXAMPLES.md  CHECK_SERVICES_STATUS.sh  CLEANUP_SUMMARY.md  CODE_EXAMPLES.md  CONTRIBUTING.md  DATABASE_SCHEMA_ADAPTIVE_CARDS.sql  DATABASE_SCHEMA_HUBSPOT_INTEGRATION.sql  DATABASE_SCHEMA_LINKEDIN_INTEGRATION.sql  DIAGNOSI_STATO_ATTUALE.md  DOCUMENTATION_INDEX.md  Dockerfile.cards  ENHANCED_ARTICLE_CHANGES.md  ENHANCED_LOGGING_SYSTEM.md  ENV_CONFIGURATION_SUMMARY.md  ENV_UNIFICATO_README.md  EXAMPLES_ADAPTIVE_CARDS.md  EXAMPLES_HUBSPOT_INTEGRATION.md  EXAMPLES_LINKEDIN_INTEGRATION.md  EXECUTIVE_SUMMARY_CARD_SERVICE.md  EXECUTIVE_SUMMARY_ONBOARDING.md  ExternalAPI.md  FASE_3_COMPLETATA.md  FASE_3_PIANO_AZIONE_DETTAGLIATO.md  FRONTEND_ACTION_PLAN.md  FRONTEND_ANALYSIS_COMPLETE.md  FRONTEND_ANALYSIS_SUMMARY.md  FRONTEND_CODE_QUALITY_ANALYSIS.md  FRONTEND_DETAILED_FINDINGS.md  FRONTEND_FILES_ANALYZED.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  (+110 more)
MIGRATIONDOCS/: ACTION_PLAN.md  ADMIN_PANEL_FEATURE_REQUEST.md  AGENTIC_AI_CORE.md  AGENTIC_BACKEND_STRUCTURE.md  ARCHITECTURE_COMPARISON.md  CARD_VISUALIZATION_STATUS.md  COMPLETE_FLOW_DIAGRAM.md  DETAILED_FILE_INVENTORY.md  FIX_COMPANY_SNAPSHOT_CARD.md  FRONTEND_ELASTIC_STRUCTURE.md  MIGRATION_ANALYSIS_CGS2_TO_PULSE.md  ONBOARDING_MICROSERVICE_STRUCTURE.md  YOUR_AREAS_SUMMARY.md
Mock/: Card Mock.md
analysis/: genw_kb_optimization_analysis.md  kb_optimization_complete.md  source_section_mapping.md
card-frontend/: .env.example  package-lock.json  package.json
clients/python/fylle-cards-client/: README.md  pyproject.toml
clients/python/fylle-cards-client/fylle_cards_client/: __init__.py  client.py  models.py
shared/: README.md  pyproject.toml  setup.cfg
shared/fylle_shared/: __init__.py  enums.py  mappings.py
shared/fylle_shared/models/: __init__.py  card.py  common.py  workflow.py
shared/fylle_shared/utils/: __init__.py  hashing.py  headers.py  tracing.py
shared/tests/: __init__.py  test_enums.py  test_hashing.py  test_headers.py  test_tracing.py
(+704 files in other folders)
