[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fylle-shared"
version = "0.1.0"
description = "Shared enums, models and utils for Fylle microservices"
requires-python = ">=3.11"
authors = [{name="Fylle Engineering", email="engineering@fylle.ai"}]
dependencies = ["pydantic>=2.8,<3", "typing-extensions>=4.8"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fylle_shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py311"

