[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fylle-cards-client"
version = "1.0.0"
description = "Python client for Fylle Cards API v1"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Fylle Engineering", email="engineering@fylle.ai"}]
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.8,<3",
    "typing-extensions>=4.8",
    "tenacity>=8.2.0,<9",  # For retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fylle_cards_client*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

